--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-sizeme": "^3.0.1",
     "react-three-fiber": "^5.3.19",
     "react-tsparticles": "^1.19.2",
-    "sass": "^1.32.8",
-    "three": "^0.126.1",
-    "vanta": "^0.5.21"
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "prettier": "^2.2.1"
