--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primer/octicons-react": "^12.1.0",
     "frontmatter-markdown-loader": "^3.6.2",
     "gatsby": "^3.0.1",
+    "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sass": "^4.0.0",
     "normalize.css": "^8.0.1",
