--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "emailjs-com": "^2.6.4",
     "frontmatter-markdown-loader": "^3.6.2",
     "gatsby": "^3.0.1",
+    "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sass": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
