--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.1.0",
+    "@types/delaunator": "^5.0.2",
     "@types/mdx": "^2.0.10",
+    "@types/poisson-disk-sampling": "^2.2.4",
+    "delaunator": "^5.0.0",
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
+    "poisson-disk-sampling": "^2.3.1",
     "prism-themes": "^1.9.0",
     "react": "^18",
     "react-dom": "^18",
