--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
-    "remark-mdx-frontmatter": "^4.0.0"
+    "remark-mdx-frontmatter": "^4.0.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/node": "^20",
