--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
+    "@microflash/rehype-starry-night": "^3.5.0",
     "@next/mdx": "^14.1.0",
     "@types/delaunator": "^5.0.2",
     "@types/mdx": "^2.0.10",
@@ -21,12 +22,10 @@
     "gray-matter": "^4.0.3",
     "next": "14.1.0",
     "poisson-disk-sampling": "^2.3.1",
-    "prism-themes": "^1.9.0",
     "react": "^18",
     "react-dom": "^18",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
-    "rehype-prism-plus": "^2.0.0",
     "rehype-slug": "^6.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^4.0.0",
